page 'landing2' css fix: change z-index for focused popup

--- a/desktop.blocks/landing-demo/__popup/landing-demo__popup.css
+++ b/desktop.blocks/landing-demo/__popup/landing-demo__popup.css
@@ -14,3 +14,8 @@
     height: 0;
     opacity: 0;
 }
+
+.landing-demo__popup_focused_yes
+{
+    z-index: 1;
+}
